Update OrderBookTrading strategy